...
            <TextView
                android:id="@+id/waterHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Water"
                android:textColor="@color/emerald"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view6" />

            <EditText
                android:id="@+id/minutesShowered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:autofillHints="Number"
                android:enabled="true"
                android:hint="0"
...
                android:text="How many times did you run the dishwasher at home today?"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/water_input2" />

            <EditText
                android:id="@+id/timesDishwasherRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Number"
                android:enabled="true"
                android:hint="0"
                android:inputType="number"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timesFlushed" />

            <TextView
                android:id="@+id/wasterHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
...
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view7" />

            <EditText
                android:id="@+id/numAlumCansUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Number"
                android:enabled="true"
...
                android:autofillHints="Number"
                android:enabled="true"
                android:hint="0"
                android:inputType="number"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numStyroContainersUsed" />

            <TextView
                android:id="@+id/waste_input4"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
...
                android:inputType="number"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/minutesShowered" />

            <EditText
                android:id="@+id/minutesWashingMachine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="Number"
                android:enabled="true"
...


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/editButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_weight="5"
        android:background="#FFFFFF"
        android:backgroundTint="@color/spring_green"
        android:fontFamily="sans-serif"
        android:text="Save"
        android:textAllCaps="true"
        android:textColor="@color/emerald"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>
