...
					android:layout_marginLeft="16dp"
					android:text="TextView"
					android:textSize="30dp"
					android:textStyle="bold" />

				<ToggleButton
					android:id="@+id/statsToggle"
					android:layout_width="105dp"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true"
					android:layout_marginTop="85dp"
					android:layout_toRightOf="@id/currentDate2"
					android:background="#1290CC"
...
					android:layout_marginBottom="0dp"
					android:padding="9dp">

				</com.github.mikephil.charting.charts.HorizontalBarChart>

				<TextView
					android:id="@+id/dailyFeedback"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="30dp"
					android:text="Feedback"
					android:textColor="#1290CC"
					android:textSize="20sp" />
...
